--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body ng-controller="FirstController">
-		<h1 class="text-center">Hello World</h1>
-		<pre>
-{{ data | json }}
-		</pre>
+	<body>
+		<nav class="cf" ng-include="'views/topnav.html'"></nav>
+		<div ng-view></div>	
 		
-
 		<!-- jQuery -->
 		<script src="//code.jquery.com/jquery.js"></script>
 		<!-- Bootstrap JavaScript -->
@@ -35,5 +32,7 @@
 		<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 		<script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
  		<script src="js/app.js"></script>
+ 		<script src="js/services/authentication.js"></script>
+ 		<script src="js/controllers/registration.js"></script>
 	</body>
 </html>
