--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
  		<script src="js/services/authentication.js"></script>
  		<script src="js/controllers/registration.js"></script>
  		<script src="js/controllers/bball.js"></script>
+ 		<script src="js/controllers/home.js"></script>
 	</body>
 </html>
