refactor code, create dash, roster counter

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
  		<script src="js/controllers/registration.js"></script>
  		<script src="js/controllers/bball.js"></script>
  		<script src="js/controllers/home.js"></script>
+ 		<script src="js/controllers/dash.js"></script>
 	</body>
 </html>
