--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
  		<script src="js/controllers/bball.js"></script>
  		<script src="js/controllers/home.js"></script>
  		<script src="js/controllers/dash.js"></script>
+ 		<script src="js/controllers/roster.js"></script>
 	</body>
 </html>
