--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 		<script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
+		<script src="js/toArrayFilter.js"></script>
  		<script src="js/app.js"></script>
  		<script src="js/services/authentication.js"></script>
  		<script src="js/controllers/registration.js"></script>
