--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,9 @@
 		<nav class="cf" ng-include="'views/topnav.html'"></nav>
 		<div class="container-fluid">
 			<div class="row" style="padding-top:40px;">
-				<div ng-view></div>	
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<div ng-view></div>		
+				</div>
 			</div>
 		</div>
 		
@@ -36,7 +38,6 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.min.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
 		<script src="https://cdn.firebase.com/libs/angularfire/2.1.0/angularfire.min.js"></script>
-		<script src="js/toArrayFilter.js"></script>
  		<script src="js/app.js"></script>
  		<script src="js/services/authentication.js"></script>
  		<script src="js/controllers/registration.js"></script>
@@ -44,5 +45,7 @@
  		<script src="js/controllers/home.js"></script>
  		<script src="js/controllers/dash.js"></script>
  		<script src="js/controllers/roster.js"></script>
+ 		<script src="js/controllers/bballnightdetail.js"></script>
+
 	</body>
 </html>
